tests/snapshots/yaml_suite_snapshots__yaml_suite_8KB6_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Multiline plain flow mapping key without value
  from: "@perlpunk"
  tags: flow mapping
  yaml: "---\n- { single line, a: b}\n- { multi\n  line, a: b}\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP {}\n    =VAL :single line\n    =VAL :\n    =VAL :a\n    =VAL :b\n   -MAP\n   +MAP {}\n    =VAL :multi line\n    =VAL :\n    =VAL :a\n    =VAL :b\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"single line\": null,\n    \"a\": \"b\"\n  },\n  {\n    \"multi line\": null,\n    \"a\": \"b\"\n  }\n]\n"
  dump: "---\n- single line:\n  a: b\n- multi line:\n  a: b\n"
