tests/snapshots/yaml_suite_snapshots__yaml_suite_8MK2_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Explicit Non-Specific Tag
  from: NimYAML tests
  tags: tag 1.3-err
  yaml: "! a\n"
  tree: "+STR\n +DOC\n  =VAL <!> :a\n -DOC\n-STR\n"
  json: "\"a\"\n"
