tests/snapshots/yaml_suite_snapshots__yaml_suite_8MK2_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: NimYAML tests
  json: "\"a\"\n"
  name: Explicit Non-Specific Tag
  tags: tag 1.3-err
  tree: "+STR\n +DOC\n  =VAL <!> :a\n -DOC\n-STR\n"
  yaml: "! a\n"
