tests/snapshots/yaml_suite_snapshots__yaml_suite_8QBE_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "key:\n- item1\n- item2\n"
  from: NimYAML tests
  json: "{\n  \"key\": [\n    \"item1\",\n    \"item2\"\n  ]\n}\n"
  name: Block Sequence in Block Mapping
  tags: mapping sequence
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +SEQ\n    =VAL :item1\n    =VAL :item2\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "key:\n - item1\n - item2\n"
