tests/snapshots/yaml_suite_snapshots__yaml_suite_8UDB_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 7.14. Flow Sequence Entries
  from: "http://www.yaml.org/spec/1.2/spec.html#id2790726"
  tags: spec flow sequence
  yaml: "[\n\"double\n quoted\", 'single\n           quoted',\nplain\n text, [ nested ],\nsingle: pair,\n]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL \"double quoted\n   =VAL 'single quoted\n   =VAL :plain text\n   +SEQ []\n    =VAL :nested\n   -SEQ\n   +MAP {}\n    =VAL :single\n    =VAL :pair\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"double quoted\",\n  \"single quoted\",\n  \"plain text\",\n  [\n    \"nested\"\n  ],\n  {\n    \"single\": \"pair\"\n  }\n]\n"
  dump: "- \"double quoted\"\n- 'single quoted'\n- plain text\n- - nested\n- single: pair\n"
