tests/snapshots/yaml_suite_snapshots__yaml_suite_8UDB_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- \"double quoted\"\n- 'single quoted'\n- plain text\n- - nested\n- single: pair\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2790726"
  json: "[\n  \"double quoted\",\n  \"single quoted\",\n  \"plain text\",\n  [\n    \"nested\"\n  ],\n  {\n    \"single\": \"pair\"\n  }\n]\n"
  name: Spec Example 7.14. Flow Sequence Entries
  tags: spec flow sequence
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL \"double quoted\n   =VAL 'single quoted\n   =VAL :plain text\n   +SEQ []\n    =VAL :nested\n   -SEQ\n   +MAP {}\n    =VAL :single\n    =VAL :pair\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "[\n\"double\n quoted\", 'single\n           quoted',\nplain\n text, [ nested ],\nsingle: pair,\n]\n"
